--- a/index.html
+++ b/index.html
@@ -40,9 +40,12 @@
         <!-- Contenido del toggle -->
 
         <div class="collapse" id="navbarToggleExternalContent">
-          <div class="bg-dark p-4">
+          <div class="p-4">
             <h5 class="text-white h4">MENU content</h5>
-            <span class="text-muted">Toggleable via the navbar brand.</span>
+            <!-- <span class="text-muted">Toggleable via the navbar brand.</span> -->
+            <button class="btn btn-info">Secciones</button>
+            <button class="btn btn-info">Secciones</button>
+            <button class="btn btn-info">Secciones</button>
           </div>
         </div>
 
@@ -60,23 +63,59 @@
 
     <div id="" class="carousel slide" data-ride="">
       <div class="carousel-inner">
-        <div class="carousel-item active">
+        <div class="carousel-item active bg-dark">
           <!--Video source-->
           <video id="videoo" src="https://brandersagency.co/img/mundo-final-web.mov" type="video/mov"
-            class="video-intro carousel-item-img rgba-black-light " autoplay loop muted playsinline>
+            class="video-intro carousel-item-img rgba-black-light" autoplay loop muted playsinline>
 
           </video>
 
-          <div class="container">
+          <div class="container-fluid">
             <div class="carousel-caption-video  text-center">
-              <h1 class="text-center text-white my-3">
-                <strong class="titulo-video">El mundo espera por ti, tu marca espera por ti.</strong>
+              <div class="row g-0">
 
-              </h1>
+
+                <div class="col-12">
+                  <div class="row g-0">
+                    <div class="col-6">
+                      <div class="container-fluid mov-izq">
+                        <h1 class="text-end text-white my-3 titulo-video">
+                          Vamos<br>con lo
+
+                        </h1>
+                      </div>
+                    </div>
+                    <div class="col-6">
+                      <div class="container-fluid text-start mov-der">
+                        <h1 class="text-start text-white my-3 titulo-video">
+                          a romper<br>normal
+                        </h1>
+                      </div>
+                    </div>
+
+                  </div>
+
+                  <div class="col-12">
+                    <div class="container-fluid acomodar text-center">
+                      <img class="img-fluid pelotica" src="img/comet_2604.png" alt="Imagen cometa">
+                    </div>
+                  </div>
+
+                </div>
+                <!-- <div class="container-fluid">
+                      <h1 class="text-center text-white my-3 titulo-video">
+                        <span class="mov-izq">con lo </span> <span class="mov-der"> normal</span>
+
+                      </h1>
+                    </div> -->
+
+
+              </div>
             </div>
           </div>
         </div>
       </div>
+    </div>
     </div>
 
 
