Acomodar Palabras e identificcion de tap

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             </a>
 
           </h1>
+          <div class="fixed-bottom">
+            <p class="text-center fw-bold text-light tap">Seleccione en cualquier lugar</p>
+          </div>
         </div>
         <div class="me-3 p-2 ">
           <div class="bg-img">
