changes for updates

--- a/about/index.html
+++ b/about/index.html
@@ -20,8 +20,8 @@
             <h2 class="text-center animate">Sobre mi</h2>
             <p class="animate">¡Hola! Soy Ramón López, desarrollador web full stack, amante de la música y un buscador
                 de soluciones
-                tecnologicas que ayudan a automatizar y optimizar el dia a dia de las personas. Soy una persona
-                empatica, responsable, motivada y sociable.</p>
+                tecnológicas que ayudan a automatizar y optimizar el día a dia de las usuarios. Soy una persona
+                empática, responsable, motivada y sociable.</p>
 
 
 
