--- a/contact/index.html
+++ b/contact/index.html
@@ -25,7 +25,7 @@
                         <p>
                             Estoy en busca de oportunidades para formar parte de empresas, agencias, personas y no
                             solo
-                            trabajar para ustedes tambien para estrechar lazos, avanzar y evolucionar por medio de
+                            trabajar para ustedes, también para estrechar lazos, avanzar y evolucionar por medio de
                             nuestro
                             trabajo. No obstante si tienes alguna otra petición no dudes en contactarme.
                         </p>
