--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
           </h1>
           <div class="fixed-bottom">
-            <p class="text-center fw-bold text-light tap">Seleccione en cualquier lugar</p>
+            <p class="align-self-start ps-lg-5 ps-sm-3 fw-bold text-light tap">Seleccione una palabra</p>
           </div>
         </div>
         <div class="me-3 p-2 ">
