--- a/works/index.html
+++ b/works/index.html
@@ -15,7 +15,7 @@
         <a class="fixed-top px-3 py-2 text-light" style="text-decoration: none;" href="../index.html">volver</a>
         <div class="row">
             <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0 ">
-                <a style="text-decoration: none;" target="_blank" href="#">
+                <a style="text-decoration: none;" target="_blank" href="https://marabanteam.com/">
                     <div class="p-5 bg-light border border-dark bg-jumbotron01 move">
                         <div class="container-fluid text-light py-5">
                             <h1 class="pt-5 fw-bold">Maraban team</h1>
@@ -25,7 +25,7 @@
                 </a>
             </div>
             <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0">
-                <a style="text-decoration: none;" target="_blank" href="#">
+                <a style="text-decoration: none;" target="_blank" href="https://catarsiszone.com/menu/">
                     <div class="p-5 bg-light border border-dark bg-jumbotron02">
                         <div class="container-fluid text-light py-5">
                             <h1 class="pt-5 fw-bold">Catarsis zone</h1>
@@ -35,7 +35,7 @@
                 </a>
             </div>
             <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0">
-                <a style="text-decoration: none;" target="_blank" href="#">
+                <a style="text-decoration: none;" target="_blank" href="https://codedealerz.com/SISDECI/">
                     <div class="p-5 bg-light border border-dark bg-jumbotron03">
                         <div class="container-fluid text-light py-5">
                             <h1 class="pt-5fw-bold">Sisdeci</h1>
@@ -45,7 +45,7 @@
                 </a>
             </div>
             <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0">
-                <a style="text-decoration: none;" target="_blank" href="#">
+                <a style="text-decoration: none;" target="_blank" href="https://safety7wear.com/">
                     <div class="p-5 bg-light border border-dark bg-jumbotron04">
                         <div class="container-fluid text-light py-5">
                             <h1 class="fw-bold">Safety 7 wear</h1>
