--- a/contact/index.html
+++ b/contact/index.html
@@ -49,8 +49,8 @@
                     </div>
                     <div class="col-12 col-lg-6 col-md-6 col-sm-12 ">
                         <div class="container animate">
-                            <img src="../assets/img/2871_R1NUIEpPUyAwNjctMjY.png" height="50" class="img-fluid" alt=""
-                                srcset="">
+                            <img loading="lazy" decoding="async" src="../assets/img/2871_R1NUIEpPUyAwNjctMjY.png"
+                                height="50" class="img-fluid" alt="" srcset="">
                         </div>
                     </div>
                 </div>
