change for updates

--- a/about/index.html
+++ b/about/index.html
@@ -17,38 +17,41 @@
 
         <div class="container-fluid text-light my-5">
 
-            <h2 class="text-center animate">Sobre mi</h2>
-            <p class="animate">¡Hola! Soy Ramón López, desarrollador web full stack, amante de la música y un buscador
-                de soluciones
-                tecnológicas que ayudan a automatizar y optimizar el día a dia de las usuarios. Soy una persona
-                empática, responsable, motivada y sociable.</p>
-
-
-
-
+            <h2 class="text-center animate">Sobre mí</h2>
+            <p class="animate">¡Hola! Soy Ramón López, desarrollador web full stack y un buscador de soluciones
+                tecnológicas que ayudan a automatizar y optimizar el día a día de los usuarios. También amo la música,
+                toco varios instrumentos y entre mis favoritos esta la guitarra. Soy una persona empática, responsable,
+                motivada y sociable.</p>
 
             <div class="row">
                 <div class="col-6">
-                    <h3 class="animate">Manejo lenguajes como:</h3>
-                    <p class="animate">JavaScript, HTML, PHP, C, C++ y phyton</p>
+                    <div class="">
+                        <h3 class="animate">Lenguajes que manejo:</h3>
+                        <p class="animate">JavaScript, HTML, PHP, C, C++ y phyton.</p>
+                    </div>
+                    <div class="">
+                        <h3 class="animate">Tecnologías que utilizo:</h3>
+                        <p class="animate">MySQL, PostgreSQL, DynamoDB, Serverless Architecture y Docker.</p>
+                    </div>
+                    <div class="">
+                        <h3 class="animate">Herramientas que utilizo:</h3>
+                        <p class="animate">Git, Github y Figma.</p>
+                    </div>
                 </div>
                 <div class="col-6">
-                    <h3 class="animate">Tecnologías que utilizo:</h3>
-                    <p class="animate">MySQL, PostgreSQL, DynamoDB, Serverless Architecture y Docker.</p>
-                </div>
-                <div class="col-12 col-lg-6 col-md-6">
-                    <h3 class="animate">Herramientas que utilizo:</h3>
-                    <p class="animate">Git, Github y Figma</p>
+                    <div class="text-center">
+                        <a class="fs-5 px-3" href="mailto:bin.ramon.sh@gmail.com"><i
+                                class="far fa-envelope new-font animate icon_move"></i></a>
+                        <a class="fs-5 px-3" href="https://github.com/lramoon"><i
+                                class="fab fa-github new-font animate icon_move"></i></a>
+                        <a class="fs-5 px-3" href="https://www.linkedin.com/in/ram%C3%B3n-l%C3%B3pez-0ab39a5a/"><i
+                                class="fab fa-linkedin new-font animate icon_move"></i></a>
+
+                    </div>
                 </div>
 
             </div>
-            <div class="text-center">
-                <a class="fs-5" href="mailto:bin.ramon.sh@gmail.com"><i class="far fa-envelope new-font"></i></a>
-                <a class="fs-5" href="https://www.instagram.com/lramoon/"><i class="fab fa-instagram new-font"></i></a>
-                <a class="fs-5" href="https://www.linkedin.com/in/ram%C3%B3n-l%C3%B3pez-0ab39a5a/"><i
-                        class="fab fa-linkedin new-font"></i></a>
-                <a class="fs-5" href="https://github.com/lramoon"><i class="fab fa-github new-font"></i></a>
-            </div>
+
         </div>
 
     </div>
