--- a/contact/index.html
+++ b/contact/index.html
@@ -23,28 +23,26 @@
                     <div class="col-12 col-lg-6 col-md-6 col-sm-12 text-light">
                         <h1 class="text-center text-light my-4 animate">¡Hablemos!</h1>
                         <p>
-                            Estoy en busca de oportunidades para formar parte de empresas, agencias, personas y no
-                            solo
-                            trabajar para ustedes, también para estrechar lazos, avanzar y evolucionar por medio de
-                            nuestro
-                            trabajo. No obstante si tienes alguna otra petición no dudes en contactarme.
+                            Estoy en busca de oportunidades para formar parte de empresas, agencias o proyectos
+                            personales. Siempre teniendo en cuenta el factor humano, con la finalidad de estrechar
+                            lazos, avanzar y evolucionar a través del entendimiento y nuestro trabajo. Si algo de esto
+                            resuena contigo, entonces estamos listos para crear juntos.
                         </p>
 
 
                         <p>
-                            Si todo esto suena bien, entonces estamos listos para trabajar juntos.
+                            ¡Contáctame!
                         </p>
 
-                        <p>No dude en acercarse a cualquiera de estas plataformas de contacto.</p>
+                        <p>No dude en acercarse a cualquiera de estas plataformas: </p>
 
-                        <a class="fs-5" href="mailto:bin.ramon.sh@gmail.com"><i
-                                class="far fa-envelope new-font animate"></i></a>
-                        <a class="fs-5" href="https://www.instagram.com/lramoon/"><i
-                                class="fab fa-instagram new-font animate"></i></a>
-                        <a class="fs-5" href="https://www.linkedin.com/in/ram%C3%B3n-l%C3%B3pez-0ab39a5a/"><i
-                                class="fab fa-linkedin new-font animate"></i></a>
-                        <a class="fs-5" href="https://github.com/lramoon"><i
-                                class="fab fa-github new-font animate"></i></a>
+                        <a class="fs-5 px-3 " href="mailto:bin.ramon.sh@gmail.com"><i
+                                class="far fa-envelope new-font animate icon_move"></i></a>
+                        <a class="fs-5 px-3 " href="https://github.com/lramoon"><i
+                                class="fab fa-github new-font animate icon_move"></i></a>
+                        <a class="fs-5 px-3 " href="https://www.linkedin.com/in/ram%C3%B3n-l%C3%B3pez-0ab39a5a/"><i
+                                class="fab fa-linkedin new-font animate icon_move"></i></a>
+
 
                     </div>
                     <div class="col-12 col-lg-6 col-md-6 col-sm-12 ">
