--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <div class="w-50 mt-5">
           <h1 class="ft-regulador">
 
-            <a class="text-decoration-none" href="./works/index.html" style="color: #521e2c;">
+            <a class="text-decoration-none" href="./works/index.html" style="color: #d3d3d3;">
               <div class="align-self-start ps-lg-5 ps-sm-3 on-hover-40 animate  animate-hello">
               </div>
             </a>
-            <a href="./contact/index.html" class="text-decoration-none" style="color: #521e2c;">
+            <a href="./contact/index.html" class="text-decoration-none" style="color: #d3d3d3;">
               <div class="align-self-start ps-lg-5 ps-sm-3 on-hover-40 animate delay04 animate-IAM">
 
               </div>
             </a>
-            <a href="./about/index.html" class="text-decoration-none" style="color: #521e2c;">
+            <a href="./about/index.html" class="text-decoration-none" style="color: #d3d3d3;">
               <div class="align-self-start ps-lg-5 ps-sm-3 on-hover-40 animate delay08 animate-RAMON">
 
               </div>
