--- a/works/index.html
+++ b/works/index.html
@@ -14,42 +14,42 @@
     <div class="container-fluid">
         <a class="fixed-top px-3 py-2 text-light" style="text-decoration: none;" href="../index.html">volver</a>
         <div class="row">
-            <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0 ">
+            <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0" style="height:50vh;">
                 <a style="text-decoration: none;" target="_blank" href="https://marabanteam.com/">
                     <div class="p-5 bg-light border border-dark bg-jumbotron01 move">
                         <div class="container-fluid text-light py-5">
-                            <h1 class="pt-5 fw-bold">Maraban team</h1>
-                            <p class="ft-p-regul">Desarrollo de one page.</p>
+                            <h1 class="pt-5 fw-bold">Desarrollo de one page</h1>
+                            <p class="ft-p-regul">Maraban team</p>
                         </div>
                     </div>
                 </a>
             </div>
-            <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0">
+            <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0" style="height:50vh;">
                 <a style="text-decoration: none;" target="_blank" href="https://catarsiszone.com/menu/">
                     <div class="p-5 bg-light border border-dark bg-jumbotron02">
                         <div class="container-fluid text-light py-5">
-                            <h1 class="pt-5 fw-bold">Catarsis zone</h1>
-                            <p class="ft-p-regul">Desarrollo de menú web.</p>
+                            <h1 class="pt-5 fw-bold">Desarrollo de menú web</h1>
+                            <p class="ft-p-regul">Catarsis zone</p>
                         </div>
                     </div>
                 </a>
             </div>
-            <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0">
+            <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0" style="height:50vh;">
                 <a style="text-decoration: none;" target="_blank" href="https://codedealerz.com/SISDECI/">
                     <div class="p-5 bg-light border border-dark bg-jumbotron03">
                         <div class="container-fluid text-light py-5">
-                            <h1 class="pt-5fw-bold">Sisdeci</h1>
-                            <p class="ft-p-regul">Desarrollo de sistema de información.</p>
+                            <h1 class="pt-5fw-bold">Sistemas de información</h1>
+                            <p class="ft-p-regul">Sisdeci</p>
                         </div>
                     </div>
                 </a>
             </div>
-            <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0">
+            <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0" style="height:50vh;">
                 <a style="text-decoration: none;" target="_blank" href="https://safety7wear.com/">
                     <div class="p-5 bg-light border border-dark bg-jumbotron04">
                         <div class="container-fluid text-light py-5">
-                            <h1 class="fw-bold">Safety 7 wear</h1>
-                            <p class="ft-p-regul">Desarrollo de ecommerce.</p>
+                            <h1 class="fw-bold">Desarrollo de ecommerce</h1>
+                            <p class="ft-p-regul">Safety 7 wear</p>
                         </div>
                     </div>
                 </a>
