Listo para prod.

--- a/about/index.html
+++ b/about/index.html
@@ -6,55 +6,72 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Ramón</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/styles.css">
+    <script rel="defer" src="./main.js"></script>
     <script src="https://kit.fontawesome.com/469f772936.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body class="bg-dark">
-    <div class="container fluid"><a href="../index.html" class="m-2 fixed-top">Volver</a>
+
+    <main>
+        <div class="wave_about">
+            <span style="--item:1">A</span>
+            <span style="--item:2">B</span>
+            <span style="--item:3">O</span>
+            <span style="--item:4">U</span>
+            <span style="--item:5">T</span>
+            <span style="--item:6">-</span>
+            <span style="--item:7">M</span>
+            <span style="--item:8">E</span>
+        </div>
+        <div class="main d-none container fluid"><a href="../index.html" class="m-2 fixed-top">Volver</a>
 
 
-        <div class="container-fluid text-light my-5">
+            <div class="container-fluid text-light my-5">
 
-            <h2 class="text-center animate">Sobre mí</h2>
-            <p class="animate">¡Hola! Soy Ramón López, desarrollador web full stack y un buscador de soluciones
-                tecnológicas que ayudan a automatizar y optimizar el día a día de los usuarios. También amo la música,
-                toco varios instrumentos y entre mis favoritos esta la guitarra. Soy una persona empática, responsable,
-                motivada y sociable.</p>
+                <h2 class="text-center animate">Sobre mí</h2>
+                <p class="animate">¡Hola! Soy Ramón López, desarrollador web full stack y un buscador de soluciones
+                    tecnológicas que ayudan a automatizar y optimizar el día a día de los usuarios. También amo la
+                    música,
+                    toco varios instrumentos y entre mis favoritos esta la guitarra. Soy una persona empática,
+                    responsable,
+                    motivada y sociable.</p>
 
-            <div class="row">
-                <div class="col-6">
-                    <div class="">
-                        <h3 class="animate">Lenguajes que manejo:</h3>
-                        <p class="animate">JavaScript, HTML, PHP, C, C++ y phyton.</p>
+                <div class="row">
+                    <div class="col-6">
+                        <div class="">
+                            <h3 class="animate">Lenguajes que manejo:</h3>
+                            <p class="animate">JavaScript, HTML, PHP, C, C++ y phyton.</p>
+                        </div>
+                        <div class="">
+                            <h3 class="animate">Tecnologías que utilizo:</h3>
+                            <p class="animate">MySQL, PostgreSQL, DynamoDB, Serverless Architecture y Docker.</p>
+                        </div>
+                        <div class="">
+                            <h3 class="animate">Herramientas que utilizo:</h3>
+                            <p class="animate">Git, Github y Figma.</p>
+                        </div>
                     </div>
-                    <div class="">
-                        <h3 class="animate">Tecnologías que utilizo:</h3>
-                        <p class="animate">MySQL, PostgreSQL, DynamoDB, Serverless Architecture y Docker.</p>
-                    </div>
-                    <div class="">
-                        <h3 class="animate">Herramientas que utilizo:</h3>
-                        <p class="animate">Git, Github y Figma.</p>
-                    </div>
-                </div>
-                <div class="col-6">
-                    <div class="text-center">
-                        <a class="fs-5 px-3" href="mailto:bin.ramon.sh@gmail.com"><i
-                                class="far fa-envelope new-font animate icon_move"></i></a>
-                        <a class="fs-5 px-3" href="https://github.com/lramoon"><i
-                                class="fab fa-github new-font animate icon_move"></i></a>
-                        <a class="fs-5 px-3" href="https://www.linkedin.com/in/ram%C3%B3n-l%C3%B3pez-0ab39a5a/"><i
-                                class="fab fa-linkedin new-font animate icon_move"></i></a>
+                    <div class="col-6">
+                        <div class="text-center">
+                            <a class="fs-5 px-3" href="mailto:bin.ramon.sh@gmail.com"><i
+                                    class="far fa-envelope new-font animate icon_move"></i></a>
+                            <a class="fs-5 px-3" href="https://github.com/lramoon"><i
+                                    class="fab fa-github new-font animate icon_move"></i></a>
+                            <a class="fs-5 px-3" href="https://www.linkedin.com/in/ram%C3%B3n-l%C3%B3pez-0ab39a5a/"><i
+                                    class="fab fa-linkedin new-font animate icon_move"></i></a>
 
+                        </div>
                     </div>
+
                 </div>
 
             </div>
 
         </div>
+    </main>
 
-    </div>
 </body>
 
 </html>
