--- a/contact/index.html
+++ b/contact/index.html
@@ -6,60 +6,75 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacta a Ramón</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/styles.css">
+    <script rel="defer" src="./main.js"></script>
     <script src="https://kit.fontawesome.com/469f772936.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="bg-dark">
-    <div class="container-fluid">
-        <a class="m-2 fixed-top" href="../index.html">Volver</a>
-        <div class="container-fluid">
+    <main>
+        <div class="wave_contact">
+            <span style="--item:1; transform: translateX(121px);">C</span>
+            <span style="--item:2;">O</span>
+            <span style="--item:3; transform: translateX(-136px);">N</span>
+            <span style="--item:4; transform: translateX(170px);">T</span>
+            <span style="--item:5; transform: translate3d(59px, 109px, 50px);
+            ">A</span>
+            <span style="--item:6;transform: translate3d(-78px, 109px, 50px);">C</span>
+            <span style="--item:7; transform: translateX(-190px);">T</span>
+        </div>
+        <div class="main d-none container-fluid">
+            <a class="m-2 fixed-top" href="../index.html">Volver</a>
+            <div class="container-fluid">
 
 
 
 
-            <div class="container py-5">
-                <div class="row">
-                    <div class="col-12 col-lg-6 col-md-6 col-sm-12 text-light">
-                        <h1 class="text-center text-light my-4 animate">¡Hablemos!</h1>
-                        <p>
-                            Estoy en busca de oportunidades para formar parte de empresas, agencias o proyectos
-                            personales. Siempre teniendo en cuenta el factor humano, con la finalidad de estrechar
-                            lazos, avanzar y evolucionar a través del entendimiento y nuestro trabajo. Si algo de esto
-                            resuena contigo, entonces estamos listos para crear juntos.
-                        </p>
+                <div class="container py-5">
+                    <div class="row">
+                        <div class="col-12 col-lg-6 col-md-6 col-sm-12 text-light">
+                            <h1 class="text-center text-light my-4 animate">¡Hablemos!</h1>
+                            <p>
+                                Estoy en busca de oportunidades para formar parte de empresas, agencias o proyectos
+                                personales. Siempre teniendo en cuenta el factor humano, con la finalidad de estrechar
+                                lazos, avanzar y evolucionar a través del entendimiento y nuestro trabajo. Si algo de
+                                esto
+                                resuena contigo, entonces estamos listos para crear juntos.
+                            </p>
 
 
-                        <p>
-                            ¡Contáctame!
-                        </p>
+                            <p>
+                                ¡Contáctame!
+                            </p>
 
-                        <p>No dude en acercarse a cualquiera de estas plataformas: </p>
+                            <p>No dude en acercarse a cualquiera de estas plataformas: </p>
 
-                        <a class="fs-5 px-3 " href="mailto:bin.ramon.sh@gmail.com"><i
-                                class="far fa-envelope new-font animate icon_move"></i></a>
-                        <a class="fs-5 px-3 " href="https://github.com/lramoon"><i
-                                class="fab fa-github new-font animate icon_move"></i></a>
-                        <a class="fs-5 px-3 " href="https://www.linkedin.com/in/ram%C3%B3n-l%C3%B3pez-0ab39a5a/"><i
-                                class="fab fa-linkedin new-font animate icon_move"></i></a>
+                            <a class="fs-5 px-3 " href="mailto:bin.ramon.sh@gmail.com"><i
+                                    class="far fa-envelope new-font animate icon_move"></i></a>
+                            <a class="fs-5 px-3 " href="https://github.com/lramoon"><i
+                                    class="fab fa-github new-font animate icon_move"></i></a>
+                            <a class="fs-5 px-3 " href="https://www.linkedin.com/in/ram%C3%B3n-l%C3%B3pez-0ab39a5a/"><i
+                                    class="fab fa-linkedin new-font animate icon_move"></i></a>
 
 
-                    </div>
-                    <div class="col-12 col-lg-6 col-md-6 col-sm-12 ">
-                        <div class="container animate">
-                            <img loading="lazy" decoding="async" src="../assets/img/2871_R1NUIEpPUyAwNjctMjY.png"
-                                height="50" class="img-fluid" alt="" srcset="">
+                        </div>
+                        <div class="col-12 col-lg-6 col-md-6 col-sm-12 ">
+                            <div class="container animate">
+                                <img loading="lazy" decoding="async" src="../assets/img/2871_R1NUIEpPUyAwNjctMjY.png"
+                                    height="50" class="img-fluid" alt="" srcset="">
+                            </div>
                         </div>
                     </div>
                 </div>
+
+
+
+
             </div>
 
-
-
-
         </div>
+    </main>
 
-    </div>
 </body>
 
 </html>
