--- a/index.html
+++ b/index.html
@@ -5,12 +5,25 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ramon Lopez | Home</title>
-  <link rel="stylesheet" href="./css/style.css">
+  <title>Ramón López | Portafolio</title>
+  <meta name="description"
+    content="¡Hola soy Ramón López!, Desarrollemos tu web o aplicación web juntos, entra aquí y mira mi portafolio.">
+  <link rel="stylesheet" href="./css/styles.css">
+  <script rel="defer" src="./main.js"></script>
 </head>
 
 <body class="bg-dark">
-  <main>
+  <div class="wave">
+    <span style="--item:1"><img src="../assets/img/logo/r.svg" class="logo-height" alt=""></span>
+    <span style="--item:2"><img src="../assets/img/logo/a.svg" class="logo-height" alt=""></span>
+    <span style="--item:3"><img src="../assets/img/logo/m.svg" class="logo-height" alt=""></span>
+    <span style="--item:4"><img src="../assets/img/logo/o.svg" class="logo-height" alt=""></span>
+    <span style="--item:5"><img src="../assets/img/logo/n.svg" class="logo-height" alt=""></span>
+    <span style="--item:6"><img src="../assets/img/logo/punto.svg" class="punto-height" alt=""></span>
+    <span style="--item:7"><img src="../assets/img/logo/l.svg" class="logo-height" alt=""></span>
+  </div>
+
+  <main class="main d-none">
     <div class="container-fluid">
       <div class="d-flex flex-wrap">
         <div class="w-50 mt-5">
