--- a/works/index.html
+++ b/works/index.html
@@ -6,56 +6,68 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Works Ramón</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/styles.css">
+    <script rel="defer" src="./main.js"></script>
 </head>
 
 <body>
 
-    <div class="container-fluid">
-        <a class="fixed-top px-3 py-2 text-light" style="text-decoration: none;" href="../index.html">volver</a>
-        <div class="row">
-            <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0" style="height:50vh;">
-                <a style="text-decoration: none;" target="_blank" href="https://marabanteam.com/">
-                    <div class="p-5 bg-light border border-dark bg-jumbotron01 move">
-                        <div class="container-fluid text-light py-5">
-                            <h1 class="pt-5 fw-bold">Desarrollo de one page</h1>
-                            <p class="ft-p-regul">Maraban team</p>
+    <main>
+        <div class="wave_work">
+            <span style="--item:1">W</span>
+            <span style="--item:2">O</span>
+            <span style="--item:3">R</span>
+            <span style="--item:4">K</span>
+            <span style="--item:5">S</span>
+        </div>
+
+        <div class="main d-none container-fluid">
+            <a class="fixed-top px-3 py-2 text-light" style="text-decoration: none;" href="../index.html">volver</a>
+            <div class="row">
+                <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0" style="height:50vh;">
+                    <a style="text-decoration: none;" target="_blank" href="https://marabanteam.com/">
+                        <div class="p-5 bg-light border border-dark bg-jumbotron01 move">
+                            <div class="container-fluid text-light py-5">
+                                <h1 class="pt-5 fw-bold">Desarrollo de one page</h1>
+                                <p class="ft-p-regul">Maraban team</p>
+                            </div>
                         </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0" style="height:50vh;">
-                <a style="text-decoration: none;" target="_blank" href="https://catarsiszone.com/menu/">
-                    <div class="p-5 bg-light border border-dark bg-jumbotron02">
-                        <div class="container-fluid text-light py-5">
-                            <h1 class="pt-5 fw-bold">Desarrollo de menú web</h1>
-                            <p class="ft-p-regul">Catarsis zone</p>
+                    </a>
+                </div>
+                <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0" style="height:50vh;">
+                    <a style="text-decoration: none;" target="_blank" href="https://catarsiszone.com/menu/">
+                        <div class="p-5 bg-light border border-dark bg-jumbotron02">
+                            <div class="container-fluid text-light py-5">
+                                <h1 class="pt-5 fw-bold">Desarrollo de menú web</h1>
+                                <p class="ft-p-regul">Catarsis zone</p>
+                            </div>
                         </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0" style="height:50vh;">
-                <a style="text-decoration: none;" target="_blank" href="https://codedealerz.com/SISDECI/">
-                    <div class="p-5 bg-light border border-dark bg-jumbotron03">
-                        <div class="container-fluid text-light py-5">
-                            <h1 class="pt-5fw-bold">Sistemas de información</h1>
-                            <p class="ft-p-regul">Sisdeci</p>
+                    </a>
+                </div>
+                <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0" style="height:50vh;">
+                    <a style="text-decoration: none;" target="_blank" href="https://codedealerz.com/SISDECI/">
+                        <div class="p-5 bg-light border border-dark bg-jumbotron03">
+                            <div class="container-fluid text-light py-5">
+                                <h1 class="pt-5fw-bold">Sistemas de información</h1>
+                                <p class="ft-p-regul">Sisdeci</p>
+                            </div>
                         </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0" style="height:50vh;">
-                <a style="text-decoration: none;" target="_blank" href="https://safety7wear.com/">
-                    <div class="p-5 bg-light border border-dark bg-jumbotron04">
-                        <div class="container-fluid text-light py-5">
-                            <h1 class="fw-bold">Desarrollo de ecommerce</h1>
-                            <p class="ft-p-regul">Safety 7 wear</p>
+                    </a>
+                </div>
+                <div class="col-12 col-md-12 col-lg-6 col-sm-12 p-0" style="height:50vh;">
+                    <a style="text-decoration: none;" target="_blank" href="https://safety7wear.com/">
+                        <div class="p-5 bg-light border border-dark bg-jumbotron04">
+                            <div class="container-fluid text-light py-5">
+                                <h1 class="fw-bold">Desarrollo de ecommerce</h1>
+                                <p class="ft-p-regul">Safety 7 wear</p>
+                            </div>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
             </div>
         </div>
-    </div>
+    </main>
+
 
 </body>
 
