--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     content="¡Hola soy Ramón López!, Desarrollemos tu web o aplicación web juntos, entra aquí y mira mi portafolio.">
   <link rel="stylesheet" href="./css/styles.css">
   <script rel="defer" src="./main.js"></script>
+  <meta name="google-site-verification" content="xv8ryaDjb5mrDhHsAGScF7ARyz882oDnPGkMGDPqeZA" />
 </head>
 
 <body class="bg-dark">
